# SocialMedia

./: CMakeLists.txt  README.txt  main.cpp
Domain/: utils.h
Domain/Conversation/: Conversation.h
Domain/Event/: Event.cpp  Event.h
Domain/Friendship/: Friendship.cpp  Friendship.h
Domain/Message/: Message.cpp  Message.h
Domain/TAD/: Array.h  BinarySearchTree.h  TreeNode.h
Domain/User/: User.cpp  User.h
Exceptions/: customException.h  domainException.h  repoException.h  serviceException.h  uiException.h
Repository/: ConversationRepository.h  EventRepository.h  FriendshipRepository.h  UserRepository.h
Service/: ConversationService.h  FriendshipService.h  Network.h  UserService.h
Tests/: tests.cpp  tests.h
UI/: Console.h
